--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -30,6 +30,8 @@ p {
     border: 0.8pt solid #c1bdbd;
     background-color: #f4f8fd;
     box-shadow: 0 1px 6px rgb(0 0 0 / 12%), 0 1px 4px rgb(0 0 0 / 24%);
+    padding: 2%;
+    margin: 1%;
 }
 
 #seccionidiomas table {
@@ -38,4 +40,37 @@ p {
 
 section h2 {
     color: #0a52b6;
+}
+
+#seccioncontactenos {
+    display: grid;
+    grid-template-areas: 
+        "area1 area1 area1 area1"
+        "area2 area2 area3 area3"
+        "area4 area4 area5 area5";
+}
+
+#uno {
+    grid-area: area1;
+}
+
+#dos {
+    grid-area: area2;
+}
+
+#tres {
+    grid-area: area3;
+}
+
+#cuatro {
+    grid-area: area4;
+}
+
+#cinco {
+    grid-area: area5;
+}
+
+nav ul {
+    display: flex;
+    justify-content: space-around;
 }
